--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta property="og:title" content="RedDragon File Cdn">
   <meta property="og:description" content="Upload & manage files quickly and easily with Reddragon Cdn. Supports all file types.">
   <meta property="og:image" content="https://url.bwmxmd.online/Adams.uzi2rytq.jpg">
-  <meta property="og:url" content="red-dragon-dfs-cdn-ne32.vercel.app/upload">
+  <meta property="og:url" content="https://cdn.giftedtech.web.id/upload">
   <title>REDDRAGON CDN || FILE MANAGEMENT</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
@@ -701,3 +701,4 @@
   </script>
 </body>
     </html>
+
